package pb_Loginpackage;
syntax = "proto3";

enum Country {
    china = 0 ;
    other = 1;
}

enum ErrCode{
    success  = 0;
	fail  =1;
}

enum msgType{
    LoginRequest = 100001;
    LoginResponse = 100002;
}

message LoginRequest {

}

message LoginResponse {
	optional ErrCode code = 1;
    string name = 2; // becomes awesomeField
    string avatar = 3;
    optional Country country = 4;
}